Read from Mongo db

--- a/templates/base.html
+++ b/templates/base.html
@@ -56,6 +56,19 @@
     </div>
   </header>
 
+<div class="container">
+    <div class="row">
+          
+              {% for elem in categories.categories %}
+                <div class="col">
+                    <h4>{{elem}}</h4><br>{{categories.categories}}
+                </div>    
+              {% endfor %}
+           
+     
+    </div>
+</div>
+
   <!-- Icons Grid -->
   <!--
   <section class="features-icons bg-light text-center">
