Completed select form

--- a/templates/base.html
+++ b/templates/base.html
@@ -55,18 +55,25 @@
       </div>
     </div>
   </header>
-
+<section class = "showcase">
 <div class="container">
     <div class="row">
-          <select name="category" method = "GET" action="\">
+        <div class="col-12">
+        <br><br>
+        <p> dfdfsjgfcsdjgsakjgfkksdjfhgsdkjfgsghjhgfsdfg</p><br>
+          <form>  
+          <select name="category" method = "GET" class="form-control form-control-lg" action="\">
               {% for elem in category_list %}
                 <option value="{{elem.category}}" selected>{{elem.category}}</option>
                
               {% endfor %}
           </select> 
-     
+          </form>
+            <br><br>
+        </div>
     </div>
 </div>
+</section>
 
   <!-- Icons Grid -->
   <!--
@@ -155,7 +162,7 @@
           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
             <img class="img-fluid rounded-circle mb-3" src="../static/img/testimonials-2.jpg" alt="">
             <h5>Fred S.</h5>
-            <p class="font-weight-light mb-0">"Jon Duschinsky! what a life changing speech about purpose! Now I am more determined to ramp up my drug importation business"</p>
+            <p class="font-weight-light mb-0">"Jon Duschinsky! what a life changing speech about purpose! Now I am resolute in my mission to ramp up my drug importation business"</p>
           </div>
         </div>
         <div class="col-lg-4">
