--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
   <link href="{{url_for('static', filename='css/landing-page.css')}}" rel="stylesheet">
 
 
-<title>Title</title>
+<title>Speaker Bureau</title>
 </head>
 <body>
 
@@ -38,144 +38,14 @@
         <div class="col-xl-9 mx-auto">
           <h1 class="mb-5">Review and Rank the Leading Orators of our Day!</h1>
         </div>
-        <!--
-        <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-          <form>
-            <div class="form-row">
-              <div class="col-12 col-md-9 mb-2 mb-md-0">
-                <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
-              </div>
-              <div class="col-12 col-md-3">
-                <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
-              </div>
-            </div>
-          </form>
-        </div>
-        -->
+        
       </div>
     </div>
   </header>
-<section class = "showcase">
-<div class="container">
-    <div class="row">
-        <div class="col-12">
-        <br><br>
-        <p> dfdfsjgfcsdjgsakjgfkksdjfhgsdkjfgsghjhgfsdfg</p><br>
-          <form action="{{url_for('findspeaker')}}" method="POST">  
-          <select name="category" id="category" class="form-control form-control-lg" >
-              {% for elem in category_list %}
-                <option value="{{elem.category}}">{{elem.category}}</option>
-               
-              {% endfor %}
-          </select> 
-          <input type="submit" value="Submit">
-          </form>
-            <br><br>
-        </div>
-    </div>
-</div>
-</section>
 
-  <!-- Icons Grid -->
-  <!--
-  <section class="features-icons bg-light text-center">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-4">
-          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-            <div class="features-icons-icon d-flex">
-              <i class="icon-screen-desktop m-auto text-primary"></i>
-            </div>
-            <h3>Fully Responsive</h3>
-            <p class="lead mb-0">This theme will look great on any device, no matter the size!</p>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-            <div class="features-icons-icon d-flex">
-              <i class="icon-layers m-auto text-primary"></i>
-            </div>
-            <h3>Bootstrap 4 Ready</h3>
-            <p class="lead mb-0">Featuring the latest build of the new Bootstrap 4 framework!</p>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="features-icons-item mx-auto mb-0 mb-lg-3">
-            <div class="features-icons-icon d-flex">
-              <i class="icon-check m-auto text-primary"></i>
-            </div>
-            <h3>Easy to Use</h3>
-            <p class="lead mb-0">Ready to use with your own content, or customize the source files!</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  -->
-  
-  <!-- Image Showcases -->
-  <section class="showcase">
-    <div class="container-fluid p-0">
-      <div class="row no-gutters">
-
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('../static/img/Keynote_address.jpg');"></div>
-        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>Review our list of Speakers to select the most suitable, gives us feedback on your Speaker experience.</h2>
-          <p class="lead mb-0">Get the best out your workforce with one of our leadership and peak performance speakers. Experts in their field, our leadership speakers have enjoyed success in their fields and are renowned for providing engaging and insightful talks on the subjects of leadership and peak performance. Leadership speakers focus on how to evolve and grow from being a boss into the leader. Running a business is about more than sheer passion and determination. <br>
-          
-          Through the topics that are covered, any audience will walk away with a new perspective on what it means to lead. Within this comes the subject of peak performance; a topic which can cover many different walks of life. From business to exploration and sport, we have peak performance speakers who have incredible stories to tell about how they maintained performance and the results that came from doing so. <br>
-          
-          To assist you in getting more out of your staff or your own personal performance, review our speaker listing to select the most appropriate Speaker. We also give you the opportunity to supply Speaker feedback. After all, its all about performance.</p>
-        </div>
-      </div>
-      <!--
-      <div class="row no-gutters">
-        <div class="col-lg-6 text-white showcase-img" style="background-image: url('../static/img/bg-showcase-2.jpg');"></div>
-        <div class="col-lg-6 my-auto showcase-text">
-          <h2>Updated For Bootstrap 4</h2>
-          <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 4!</p>
-        </div>
-      </div>
-      <div class="row no-gutters">
-        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('../static/img/bg-showcase-3.jpg');"></div>
-        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-          <h2>Easy to Use &amp; Customize</h2>
-          <p class="lead mb-0">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!</p>
-        </div>
-      </div>
-      -->
-    </div>
-  </section>
-
-  <!-- Testimonials -->
-  <section class="testimonials text-center bg-light">
-    <div class="container">
-      <h2 class="mb-5">What people are saying...</h2>
-      <div class="row">
-        <div class="col-lg-4">
-          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="../static/img/testimonials-1.jpg" alt="">
-            <h5>Margaret E.</h5>
-            <p class="font-weight-light mb-0">"When Arnie came out and said "I'll be back", the place erupted. I was bored with his speech though"</p>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="../static/img/testimonials-2.jpg" alt="">
-            <h5>Fred S.</h5>
-            <p class="font-weight-light mb-0">"Jon Duschinsky! what a life changing speech about purpose! Now I am resolute in my mission to ramp up my drug importation business"</p>
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-            <img class="img-fluid rounded-circle mb-3" src="../static/img/testimonials-3.jpg" alt="">
-            <h5>Sarah W.</h5>
-            <p class="font-weight-light mb-0">"The seminar on branding was sensational, carbon emissions can be increased if we brand it correctly!"</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+ <div class="container">
+    {% block content%} {% endblock %}
+ </div> 
 
 
   <!-- Footer -->
