--- a/templates/index.html
+++ b/templates/index.html
@@ -1,135 +1,75 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Parallax Template - Materialize</title>
-
-  <!-- CSS  -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-  <link href="static/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-</head>
-
-
-<body>
-  <nav class="red" role="navigation">
-    <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo"><i class="large material-icons">perm_camera_mic</i></a>
-     
-      <ul class="right">
-        <li><a href="#">Navbar Link</a></li>
-      </ul>
-  
-    </div>
-  </nav>
-
-  
-  
-      <div class="container">
-      <div class="banner-image">
-        <br><br>
-        <h1 class="header center teal-text text-lighten-2">KeyNote Speaker Review</h1>
-        <div class="row center">
-          <h5 class="header col s12 light">Review and Rank the leading Orators of our day.</h5>
-        <!--</div>
-        <div class="row center no_margin">-->
-          <a href="#" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
-        </div>
-     </div>   
-      </div>
-   
-    
  
-  <div class="container">
-    <div class="section">
+{% extends 'base.html' %} {% block content %}
 
-      <!--   Icon Section   -->
+<section class = "showcase">
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+        <br><br>
+        <p> dfdfsjgfcsdjgsakjgfkksdjfhgsdkjfgsghjhgfsdfg</p><br>
+          <form action="{{url_for('findspeaker')}}" method="POST">  
+          <select name="category" id="category" class="form-control form-control-lg" >
+              {% for elem in category_list %}
+                <option value="{{elem.category}}">{{elem.category}}</option>
+               
+              {% endfor %}
+          </select> 
+          <input type="submit" value="Submit">
+          </form>
+            <br><br>
+        </div>
+    </div>
+</div>
+</section>
+
+  
+
+  <section class="showcase">
+    <div class="container-fluid p-0">
+      <div class="row no-gutters">
+
+        <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('../static/img/Keynote_address.jpg');"></div>
+        <div class="col-lg-6 order-lg-1 my-auto showcase-text">
+          <h2>Review our list of Speakers to select the most suitable, gives us feedback on your Speaker experience.</h2>
+          <p class="lead mb-0">Get the best out your workforce with one of our leadership and peak performance speakers. Experts in their field, our leadership speakers have enjoyed success in their fields and are renowned for providing engaging and insightful talks on the subjects of leadership and peak performance. Leadership speakers focus on how to evolve and grow from being a boss into the leader. Running a business is about more than sheer passion and determination. <br>
+          
+          Through the topics that are covered, any audience will walk away with a new perspective on what it means to lead. Within this comes the subject of peak performance; a topic which can cover many different walks of life. From business to exploration and sport, we have peak performance speakers who have incredible stories to tell about how they maintained performance and the results that came from doing so. <br>
+          
+          To assist you in getting more out of your staff or your own personal performance, review our speaker listing to select the most appropriate Speaker. We also give you the opportunity to supply Speaker feedback. After all, its all about performance.</p>
+        </div>
+      </div>
+      
+    </div>
+  </section>
+
+  <!-- Testimonials -->
+  <section class="testimonials text-center bg-light">
+    <div class="container">
+      <h2 class="mb-5">What people are saying...</h2>
       <div class="row">
-        <div class="col s12">
-          <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Speeds up development</h5>
-
-            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+        <div class="col-lg-4">
+          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid rounded-circle mb-3" src="../static/img/testimonials-1.jpg" alt="">
+            <h5>Margaret E.</h5>
+            <p class="font-weight-light mb-0">"When Arnie came out and said "I'll be back", the place erupted. I was bored with his speech though"</p>
           </div>
         </div>
-   
-      </div>
-
-    </div>
-  </div>
-
-  
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+        <div class="col-lg-4">
+          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid rounded-circle mb-3" src="../static/img/testimonials-2.jpg" alt="">
+            <h5>Fred S.</h5>
+            <p class="font-weight-light mb-0">"Jon Duschinsky! what a life changing speech about purpose! Now I am resolute in my mission to ramp up my drug importation business"</p>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+            <img class="img-fluid rounded-circle mb-3" src="../static/img/testimonials-3.jpg" alt="">
+            <h5>Sarah W.</h5>
+            <p class="font-weight-light mb-0">"The seminar on branding was sensational, carbon emissions can be increased if we brand it correctly!"</p>
+          </div>
         </div>
       </div>
     </div>
-   
- 
-  <div class="container">
-    
-      <div class="row">
-        <div class="col s12 center">
-          <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4>Contact Us</h4>
-          
-        </div>
-      </div>
+  </section>
 
-  </div>
-
-  <footer class="page-footer teal">
-    <div class="container">
-      <div class="row">
-        <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-          </ul>
-        </div>
-        
-      </div>
-    </div>
-    <div class="footer-copyright">
-      <div class="container">
-      Made by <a class="brown-text text-lighten-3" href="#">pppp</a>
-      </div>
-    </div>
-  </footer>
-
-
-  <!--  Scripts-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-    <script type="text/javascript">
-        $(document).ready(function() {
-            $('.collapsible').collapsible();
-            $('select').material_select();
-            $(".button-collapse").sideNav();
-        });
-
-        $('.datepicker').pickadate({
-            selectMonths: true, // Creates a dropdown to control month
-            selectYears: 15, // Creates a dropdown of 15 years to control year,
-            today: 'Today',
-            clear: 'Clear',
-            close: 'Ok',
-            closeOnSelect: false // Close upon selecting a date,
-        });
-
-        document.getElementById("matfix").addEventListener("click", function(e) {
-            e.stopPropagation();
-        });
-    </script>
-
-  </body>
-</html>
+  {% endblock %}
