--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
     </div>
   </header>
 
- <div class="container">
+ <div class="container-fluid">
     {% block content%} {% endblock %}
  </div> 
 
