--- a/templates/speaker_list.html
+++ b/templates/speaker_list.html
@@ -19,12 +19,8 @@
     </div>
 
     <div class="row">
-     <a href="#" ></a>
+     <a class="btn btn-primary" href="{{url_for('new_speaker')}}" >Add Speaker</a>
     </div>
 
-   <!--
-   {% for person in speakers %}
-    <h1>{{person.bio}}</h1>
-   {% endfor %} 
-   -->
+   
 {% endblock %}
