Updated styling on buttons

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-light bg-light static-top">
     <div class="container">
-      <a class="navbar-brand" href="#">KeyNoteRank</a>
+      <a class="navbar-brand" href="{{url_for('index')}}"><h1><i class="fas fa-home"></i> International Orator Hub</h1></a>
       <a class="btn btn-primary" href="#">Tel: +353 66 856941</a>
     </div>
   </nav>
