--- a/templates/speaker_list.html
+++ b/templates/speaker_list.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %} {% block content %}
 
-        <br>
+    <div class="row m-2"> 
         <h2>Speakers specialising in {{category}}</h2>
-        <br>
+    </div>
+
     <div class="row">
-        
         {% for person in speakers %}
         <div class="col-sm-6 col-lg-4 mb-3">
             <div class="card mb-0 h-100">
@@ -22,7 +22,11 @@
     </div>
 
     <div class="row">
-     <a class="btn btn-primary" href="{{url_for('new_speaker')}}" >Add Speaker</a>
+         <div class="col"></div> 
+         <div class="col-4">
+                <a class="btn btn-primary btn-lg btn-block m-5" href="{{url_for('new_speaker')}}" >Add Speaker</a>
+         </div>
+         <div class="col"></div> 
     </div>
 
    
