--- a/templates/editspeaker.html
+++ b/templates/editspeaker.html
@@ -9,7 +9,7 @@
                     <label class="form-check-label" for="category"><h5>{{elem.category}}</h5></label>    
                 </div> 
                 {% endfor %}
-               
+                
             </div>
             <div class="form-group">
                 <input id="name" name="name" type="text" value = "{{speaker.name}}" class="form-control form-control-lg">
@@ -17,22 +17,22 @@
             </div>
         
             <div class="form-group">
-                <textarea name="bio" id="bio" value = "{{speaker.bio}}" class="form-control form-control-lg"></textarea>
+                <textarea name="bio" id="bio" class="form-control form-control-lg">{{speaker.bio}}</textarea>
                 <label for="bio">Biography</label>
             </div>
 
             <div class="form-group">
-                <textarea name="banner" id="banner" value = "{{speaker.banner}}"class="form-control form-control-lg"></textarea>
+                <textarea name="banner" id="banner" class="form-control form-control-lg">{{speaker.banner}}</textarea>
                 <label for="banner">Short Description</label>
             </div>
 
             <div class="form-group">
-                <textarea name="photo" id="photo" value = "{{speaker.photo}}"class="form-control form-control-lg"></textarea>
+                <textarea name="photo" id="photo" class="form-control form-control-lg">{{speaker.photo}}</textarea>
                 <label for="photo">Photo link</label>
             </div>
 
         <div class="row">
-            <button class="btn btn-primary" type="submit">Update Task
+            <button class="btn btn-primary" type="submit">Update Speaker
                 <i class="fab fa-facebook-f"></i>
              </button>
         </div>
