--- a/templates/editspeaker.html
+++ b/templates/editspeaker.html
@@ -1,40 +1,56 @@
 {% extends 'base.html' %} {% block content %}
-<br>
+
+
+<div class = "row">
+ <div class = "col-12 my-3">
+    <h2>Please enter new Speakers' Details</h2>
+ </div>  
+</div>
+
 <div class="row">
     <form action="{{url_for('updatespeaker',speaker_id=speaker._id)}}" method="POST"  class="col">
-            <div class="form-group">                        
+            
+            <div class="form-group">
+                <label for="name">Speaker Name</label>
+                <input id="name" name="name" type="text" value = "{{speaker.name}}" class="form-control form-control-lg">
+                
+            </div>
+        
+            <div class="form-group">
+                <label for="bio">Biography</label>
+                <textarea name="bio" id="bio" class="form-control form-control-lg" rows="10">{{speaker.bio}}</textarea>
+                
+            </div>
+
+            <div class="form-group">
+                <label for="banner">Short Description</label>
+                <textarea name="banner" id="banner" class="form-control form-control-lg">{{speaker.banner}}</textarea>
+               
+            </div>
+
+            <div class="form-group">
+                <label for="photo">Photo link</label>
+                <input name="photo" id="photo" value="{{speaker.photo}}" class="form-control form-control-lg">                
+            </div>
+
+            <div class="form-group card p-3 bg-light">  
+                <h6 class="font-weight-normal">Edit Speaker Categories</h6>
+
                 {% for elem in categories %}
                 <div class="form-check">  
-                    <input type="checkbox" style="margin-right: 1em" name="category" value = "{{elem.category}}" id="category">
-                    <label class="form-check-label" for="category"><h5>{{elem.category}}</h5></label>    
+                    {% if elem.category in speaker.category %}
+                        <input type="checkbox" style="margin-right: 1em" name="category" value = "{{elem.category}}" id="category" checked>
+                    {% else %}
+                        <input type="checkbox" style="margin-right: 1em" name="category" value = "{{elem.category}}" id="category">
+                    {% endif %}
+                    <label class="form-check-label" for="category"><p>{{elem.category}}</p></label>    
                 </div> 
                 {% endfor %}
                 
             </div>
-            <div class="form-group">
-                <input id="name" name="name" type="text" value = "{{speaker.name}}" class="form-control form-control-lg">
-                <label for="name">Speaker Name</label>
-            </div>
-        
-            <div class="form-group">
-                <textarea name="bio" id="bio" class="form-control form-control-lg">{{speaker.bio}}</textarea>
-                <label for="bio">Biography</label>
-            </div>
-
-            <div class="form-group">
-                <textarea name="banner" id="banner" class="form-control form-control-lg">{{speaker.banner}}</textarea>
-                <label for="banner">Short Description</label>
-            </div>
-
-            <div class="form-group">
-                <textarea name="photo" id="photo" class="form-control form-control-lg">{{speaker.photo}}</textarea>
-                <label for="photo">Photo link</label>
-            </div>
 
         <div class="row">
-            <button class="btn btn-primary" type="submit">Update Speaker
-                <i class="fab fa-facebook-f"></i>
-             </button>
+            <button class="btn btn-primary" type="submit">Update Speaker  </button>
         </div>
     </form>
 </div>
