--- a/templates/newspeaker.html
+++ b/templates/newspeaker.html
@@ -1,42 +1,50 @@
 {% extends 'base.html' %} {% block content %}
-<br>
-<div class="row">
+
+<div class = "row">
+ <div class = "col-12 my-3">
+    <h2>Please enter the New Speakers' Details</h2>
+ </div>  
+</div>
+
+<div class = "row">
     <form action="{{url_for('add_speaker')}}" method="POST"  class="col s12">
+            
             <div class="form-group">
-                    
-                    <select id="category" name="category" class="form-control form-control-lg">
-                        <option value="" disabled selected>Choose Category</option>
-                        {% for cat in categories %}
-                            <option value="{{cat.category}}">{{cat.category}}</option>
-                        {% endfor %}
-                    </select>
-                    <label>Task Category</label>
-               
-            </div>
-            <div class="form-group">
-               
-                <input id="name" name="name" type="text" class="form-control form-control-lg">
                 <label for="name">Speaker Name</label>
+                <input id="name" name="name" type="text" class="form-control form-control-lg">
+                
             </div>
         
             <div class="form-group">
-                <textarea name="bio" id="bio" class="form-control form-control-lg"></textarea>
                 <label for="bio">Biography</label>
+                <textarea name="bio" id="bio" class="form-control form-control-lg" rows="10"></textarea>
+                
             </div>
 
             <div class="form-group">
-                <textarea name="banner" id="banner" class="form-control form-control-lg"></textarea>
                 <label for="banner">Short Description</label>
+                <textarea name="banner" id="banner" class="form-control form-control-lg"></textarea>
+                
             </div>
 
             <div class="form-group">
-                <textarea name="photo" id="photo" class="form-control form-control-lg"></textarea>
                 <label for="photo">Photo link</label>
+                <textarea name="photo" id="photo" class="form-control form-control-lg"></textarea>
+            </div>
+
+            <div class="form-group">
+               <h6 class="font-weight-normal">Select Speaker Categories</h6>
+                {% for cat in categories %}
+                    <div class="form-check">  
+                        <input type="checkbox" style="margin-right: 1em" name="category" value = "{{cat.category}}" id="category">
+                        <label class="form-check-label" for="category"><h5 class="font-weight-normal">{{cat.category}}</h5></label>    
+                    </div> 
+                {% endfor %}
             </div>
 
         <div class="row">
-            <button class="btn btn-primary" type="submit" name="action">Add Task
-                <i class="fab fa-facebook-f"></i>
+            <button class="btn btn-primary" type="submit" name="action">Add Speaker
+                
              </button>
         </div>
     </form>
