Added home button on HTML screens

--- a/templates/speaker_list.html
+++ b/templates/speaker_list.html
@@ -21,6 +21,10 @@
          {% endfor %}
     </div>
 
-
+    <div class="row">
+      <div class="col-lg-4">
+        <a  href="{{url_for('index')}}" class="col-med-4 btn btn-info btn-block" type="submit">Home  </a>
+      </div>  
+    </div>
    
 {% endblock %}
