--- a/templates/editspeaker.html
+++ b/templates/editspeaker.html
@@ -3,7 +3,7 @@
 
 <div class = "row">
  <div class = "col-12 my-3">
-    <h2>Please enter new Speakers' Details</h2>
+    <h2>Please Update Speakers' Details</h2>
  </div>  
 </div>
 
@@ -55,5 +55,10 @@
     </form>
 </div>
 
+<div class="row">
+      <div class="col-lg-4 my-5">
+        <a  href="{{url_for('index')}}" class="btn btn-info btn-lg btn-block">Home  </a>
+      </div>  
+</div>
 
 {% endblock %}
