--- a/templates/newspeaker.html
+++ b/templates/newspeaker.html
@@ -50,5 +50,10 @@
     </form>
 </div>
 
+<div class="row">
+      <div class="col-lg-4 my-5">
+        <a  href="{{url_for('index')}}" class="btn btn-info btn-lg btn-block" type="submit">Home  </a>
+      </div>  
+</div>
 
 {% endblock %}
