--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,7 @@
                 <a href="{{url_for('new_speaker')}}" class="btn btn-info btn-lg m-3">Add Speaker</a> 
                 <a class="btn btn-info btn-lg m-3" href="{{url_for('new_category')}}" >Add Category</a>
                 <a class="btn btn-info btn-lg m-3" href="{{url_for('remove_category')}}" >Delete Category</a>
+                <a class="btn btn-info btn-lg m-3" href="{{url_for('edit_category')}}" >Edit Category</a>
             </form>  
            
         </div>
